--- a/server/views/ABM/Plu/plu1_1.ejs
+++ b/server/views/ABM/Plu/plu1_1.ejs
@@ -2,18 +2,129 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../../templates/head', {datahead: {titulo: 'Búsqueda PLUs' , css: '/css/ABM/PLUs/PLU.css' }}) %>
+<%- include('../../templates/head', {datahead: {titulo: 'Selección PLU' , css: '/css/ABM/PLUs/plu1_1.css' }}) %>
 
     <body>
-        <a id="a-volver" class='container-btn-return' href="/api/menu/abm">
-            <button id="btn-volver" class='btn-return' title="Volver"></button>
+        <a class='container-btn-return' href="/api/menu/prices/search">
+            <button class='btn-return' title="Volver"></button>
         </a>
-        <div class='container'>
-            <div id="container-data" class='container-data'>
-                <p>
-                    <%- JSON.stringify(data) %>
-                </p>
-            </div>           
-    </body>
+        <div class="table">
+            <div class="container-table">
+                <table id='myTable'>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>
+                                <form method="POST" id="input-order-id" action="">
+                                    <input class="header-table" type="text" name="order" value="PLU" readonly>
+                                </form>
+                            </th>
+                            <th>
+                                <form method="POST" id="input-order-name" action="">
+                                    <input class="header-table" type="text" name="order" value="NOMBRE" readonly>                                        
+                                </form>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% if (data) { %>
+                            <% for (var i=0; i < data.length; i++ ) { %>
+                                <tr>
+                                    <form method="POST" id="newprice" action="/api/menu/abm/plu/formEditGral">
+                                        <td class="td-edit">
+                                            <input type="submit" value="Edit">
+                                        </td>
+                                        <td>
+                                            <input class="inputDisable" type="text" name="id"
+                                                value="<%= data[i].id %>" readonly>
+                                        </td>
+                                        <td>
+                                            <input class="inputDisable" type="text" name="name"
+                                                value="<%= data[i].name %>" readonly
+                                                title="<%= data[i].name %>">
+                                        </td>
+                                    </form>
+                                </tr>
+                                <% } %>
+                        <% } else { %>
+                            <tr>
+                                <td colspan="3">No_hay_registros</td>
+                            </tr>
+                        <% } %>
+                    </tbody>
+                </table>
+            </div>
+            <!--
+            <form id="input-page-form" class="form-pagination" action="/api/menu/prices/table" method="post">
+                <div class="page-controll">
+                    <h4>Mostrando página&nbsp</h4>
+                    <input type="number" min="1" max="<%#data.page.totalPaginas%>" id="inputPage"
+                        placeholder="<%#data.page.pagActual%>" name="inputPage" value="<%#data.page.pagActual%>"
+                        onchange="submitForm('input-page-form')" />
+                    <h4> de <%#data.page.totalPaginas%>
+                    </h4>
+                </div>
+                <div class="page-controll">
+                    <input class="btn-pagination" type="button" title="first" id="first" onclick="setPage(event)"
+                        value="<%#__('| <')%>">
+                    <input class="btn-pagination" type="button" title="previous" id="previous" onclick="setPage(event)"
+                        value="<%#__('<<')%>">
+                    <input class="btn-pagination" type="button" title="next" id="next" onclick="setPage(event)"
+                        value="<%#__('>>')%>">
+                    <input class="btn-pagination" type="button" title="last" id="last" onclick="setPage(event)"
+                        value="<%#__('> |')%>">
+                </div>
+                <div class="page-controll">
+                    <h4>
+                        <%#data.page.forMinimo%> a <%#data.page.forMaximo%> registros de <%#data.page.regTotal%>
+                    </h4>
+                </div>
+            </form>
+            -->
+        </div>
+        <!--
+        <script>
 
+            function setPage(e) {
+                //console.log('Opcion: '+e.target.id);
+                var inputPage = parseInt(document.getElementById('inputPage').value);
+
+                if (e.target.id == 'first') {
+                    document.getElementById('inputPage').value = 1;
+                    submitForm('input-page-form');
+                }
+                if (e.target.id == 'previous') {
+                    if (inputPage == 1) {
+                        alert('Ya se encuentra en la primer página!');
+                    } else {
+                        document.getElementById('inputPage').value = inputPage - 1;
+                        submitForm('input-page-form');
+                    }
+                }
+                if (e.target.id == 'next') {
+                    if (inputPage == <%# data.page.totalPaginas %>) {
+                        alert('Ya se encuentra en la última página!');
+                    } else {
+                        document.getElementById('inputPage').value = inputPage + 1;
+                        submitForm('input-page-form');
+                    }
+                }
+                if (e.target.id == 'last') {
+                    document.getElementById('inputPage').value = <%#data.page.totalPaginas %>;
+                    submitForm('input-page-form');
+                }
+            }
+
+
+            function submitForm(formId) {
+                var oForm = document.getElementById(formId);
+                if (oForm) {
+                    oForm.submit();
+                }
+            }
+
+        </script>
+        -->
+    </body>
+    
 </html>
