--- a/server/views/ABM/Plu/plu2_0.ejs
+++ b/server/views/ABM/Plu/plu2_0.ejs
@@ -194,14 +194,14 @@
                     </div>
                 </form>
             </div>     
-            <a id="a-volver" class='container-btn-return' href="/api/menu/abm">
+            <a id="a-volver" class='container-btn-return' href="/api/menu/abm/plu">
                 <button id="btn-volver" class='btn-return' title="Volver"></button>
             </a>            
         </div>
         <script>
         /*
             var img = document.createElement('img');
-            img.src = 'data:image/jpg;buffer,' + btoa('<%=data[0].binarydata.data%>');
+            img.src = 'data:image/jpg;buffer,' + btoa('<%#data[0].binarydata.data%>');
             document.getElementById('icono').appendChild(img);
         */    
             function viewForm(id){
