--- a/server/views/ABM/Plu/plu1_1.ejs
+++ b/server/views/ABM/Plu/plu1_1.ejs
@@ -5,7 +5,7 @@
 <%- include('../../templates/head', {datahead: {titulo: 'Selección PLU' , css: '/css/ABM/PLUs/plu1_1.css' }}) %>
 
     <body>
-        <a class='container-btn-return' href="/api/menu/prices/search">
+        <a class='container-btn-return' href="/api/menu/abm/plu">
             <button class='btn-return' title="Volver"></button>
         </a>
         <div class="table">
